--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio | Computer Science Student</title>
+  <title>Timothy Kim - Personal Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Personal portfolio website showcasing projects, experience, and skills">
+  <meta name="description" content="Personal portfolio I made for experience and projects">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
